# autopublisher

./: .directory  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  Makefile  README.md  TODO.md  autopublish_from.py  autopublisher.py  bump.py  customfilters.py  dateparse.py  docker-compose.dev.yml  document_utils.py  env.example  fabfile.py  file_utils.py  load.py  mail.py  mailbot.py  maildriver.py  main.py  prepare.py  publish.py  pylama.ini  pyproject.toml  requirements.txt  ruff.toml  settings.py  setup.py  spelling.py  telegrambot.py  telegrambot_old.py  telegramlib.py  transliterate.py  yandex.py  zipbot.py
autopublisher/: __init__.py  __main__.py  arguments.py  config.py  document_utils.py  file_utils.py  imagebot.py  prepare.py  settings.py  telegrambot.py  yandex.py  zipbot.py
autopublisher/bot/: imagebot.py
autopublisher/documents/: document.py  image.py
autopublisher/handlers/: any_handler.py  dialog_bot.py  echo.py  error.py  imagebot.py  mailbot.py  start.py
autopublisher/mail/: mail.py  maildriver.py
autopublisher/publish/: prepare.py  publish.py
autopublisher/services/: telegrambot.py
autopublisher/utils/: dateparse.py  document.py  dt.py  file.py  spelling.py  telegram.py  transliterate.py
debian/config/: autopublisher.conf.example
debian/imagemagick/DEBIAN/: control
fabdeploy/: autopublisher.service  sources.list  telegrambot.service
