[tool.poetry]
name = "autopublisher"
version = "3.0.0"
description = "Script for automatic publish news and updates from email to drupal site"
authors = ["Alexey <escantor@gmail.com>"]
classifiers = [
    "Intended Audience :: Developers",
    "Natural Language :: Russian",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
]
license = "MIT"
readme = "README.md"
packages = [
  {include = "autopublisher"}
]
include = ["autopublisher/version.py"]

[tool.poetry.dependencies]
python = "~3.11"
# apiai==1.2.3
aiomisc = "^17.0"
beautifulsoup4 = "~4.12"
ConfigArgParse = "^1.7"
EasyProcess = "~1.1"
html2text = "2020.1.16"
mammoth = "~1.6"
Pillow = "~10.2"
python-dateutil = "~2.8"
python-magic = "~0.4.27"
python-telegram-bot = "12.8"
PyVirtualDisplay = "3.0"
razdel = "~0.5"
requests = "~2.32"
# Selenium version fixed because of gecodriver error running in docker package
# See for example https://github.com/appium/python-client/issues/863
selenium = "==4.9.0"
setproctitle = "^1.3"
yarl="~=1.9"
fabric = "^3.2.2"

[tool.poetry.group.dev.dependencies]
aiomisc-pytest = "^1.1.1"
black = "^24.1.1"
mypy = "^1.8.0"
pre-commit = "^3.6.0"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
ruff = "^0.1.14"

[tool.poem-plugins.version]
provider = "git"
update_pyproject = true

[tool.poem-plugins.version.git]
format = "long"

[tool.poetry.scripts]
autopublisher = "autopublisher.__main__:main"

[tool.mypy]
allow_subclassing_any = true
allow_untyped_calls = true
allow_untyped_decorators = true
ignore_missing_imports = true
implicit_reexport = true
pretty = true
show_error_codes = true
strict = true
warn_return_any = false

[tool.pytest.ini_options]
python_files = "test_*"
python_functions = "test_*"
python_classes = "TestSuite*"
addopts = "-p no:cacheprovider"

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["autopublisher"]

[build-system]
requires = ["poetry-core>=1.8.1"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"
select = [
  "BLE",
  "C90",
  "E",
  "F",
  "G",
  "I",
  "ICN",
  "ISC",
  "PLE",
  "Q",
  "RUF006",
  "RUF100",
  "T10",
  "T20",
  "TID",
  "UP",
  "W",
]
